syntax = "proto3";
package carkot;

message DirectionRequest {
    enum Command {
        stop = 0;
        forward = 1;
        backward = 2;
        left = 3;
        right = 4;
    }
    Command command = 1;
    int32 sid = 2;
}

message DirectionResponse {
    int32 code = 1;
}
