syntax = "proto3";
package carkot;

message LocationResponse {

    LocationData locationResponseData = 1;
    int32 code = 2;

    message LocationData {
        double x = 1;
        double y = 2;
        double angle = 3;
    }
}
